cluster/apps/networking/traefik/external/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-external
  labels:
    gateway.home-operations.io/type: external
spec:
  controllerName: traefik.io/gateway-controller
