cluster/apps/networking/traefik/external/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-external
  namespace: networking
  annotations:
    gatus.io/enabled: "true"
    gatus.io/endpoint: |
      path: /dashboard/
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "traefik-external.home.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rfc1918-ips
      backendRefs:
        - name: traefik-external
          port: 8080
